--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,24 +308,82 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='head_1'>Head 1</h2>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_35e3362b34ffa65c97de19e7d1ec06cb4e8e0016_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>on-shell space</mtext></mtd></mtr> <mtr><mtd><mtext> of field histories</mtext></mtd></mtr> <mtr><mtd><mtext>restricted to</mtext></mtd></mtr> <mtr><mtd><mtext>Cauchy surface</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mover><mo>⟶</mo><mrow><mtable><mtr><mtd><mtext>homotopy</mtext></mtd></mtr> <mtr><mtd><mtext>quotient</mtext></mtd></mtr> <mtr><mtd><mtext>by</mtext></mtd></mtr> <mtr><mtd><mtext>infinitesimal</mtext></mtd></mtr> <mtr><mtd><mtext>symmetries</mtext></mtd></mtr></mtable></mrow></mover></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>covariant</mtext></mtd></mtr> <mtr><mtd><mtext>phase space</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mover><mo>⟶</mo><mrow><mtable><mtr><mtd><mtext>Lie algebra</mtext></mtd></mtr> <mtr><mtd><mtext>of functions</mtext></mtd></mtr></mtable></mrow></mover></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>Poisson algebra</mtext></mtd></mtr> <mtr><mtd><mtext>of observables</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↘</mo></mtd> <mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo><msup><mrow></mrow> <mpadded width='0'><mtext>Lie integration</mtext></mpadded></msup></mtd> <mtd></mtd> <mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mi>quantization</mi></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>symplectic</mtext></mtd></mtr> <mtr><mtd><mtext>groupoid</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mover><mo>⟶</mo><mrow><mtable><mtr><mtd><mtext>polarized</mtext></mtd></mtr> <mtr><mtd><mtext>convolution</mtext></mtd></mtr> <mtr><mtd><mtext>algebra</mtext></mtd></mtr></mtable></mrow></mover></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>quantum algebra</mtext></mtd></mtr> <mtr><mtd><mtext>of observables</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \array{
+  \left\{
+    \array{
+      \text{on-shell space} 
+      \\
+      \text{ of field histories}
+      \\
+      \text{restricted to}
+      \\ 
+      \text{Cauchy surface}
+    }
+  \right\}
+   &amp;\overset{\array{ \text{homotopy} \\ \text{quotient} \\ \text{by} \\ \text{infinitesimal} \\ \text{symmetries} }}{\longrightarrow}
+   &amp;
+   \left\{
+       \array{
+         \text{covariant}
+         \\
+         \text{phase space}
+       }
+   \right\}
+   &amp;\overset{ \array{\text{Lie algebra} \\ \text{of functions} } }{\longrightarrow}&amp;
+   \left\{
+      \array{
+        \text{Poisson algebra}
+        \\
+        \text{of observables}
+      }
+   \right\}
+   \\
+   &amp;
+     \searrow
+   &amp;
+     \Big\downarrow{}^\mathrlap{{\text{Lie integration}}}
+   &amp;&amp;
+     {}^{\mathllap{quantization}}\Big\downarrow
+   \\
+   &amp;&amp; \left\{
+      \array{
+        \text{symplectic}
+        \\
+        \text{groupoid}
+      }
+   \right\}
+   &amp;
+   \overset{
+      \array{
+         \text{polarized}
+         \\
+         \text{convolution}
+         \\
+         \text{algebra}
+      }
+   }{\longrightarrow}&amp;
+   \left\{
+      \array{
+         \text{quantum algebra}
+         \\
+         \text{of observables}
+      }
+   \right\}
+   }
 
-<p>text</p>
-
-<h2 id='head_2'>Head 2</h2>
-
-<p>text</p>
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November 24, 2017 15:41:20 
+  Revised on November 25, 2017 00:09:03 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.82.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1281" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1281 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1282" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1282 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
