--- a/pages/18586.html
+++ b/pages/18586.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -322,6 +322,10 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
+<ul>
+<li>G. N. Watson, <em>A treatise on the theory of Bessel functions</em>, Cambridge University Press 1966 (<a href='https://archive.org/details/ATreatiseOnTheTheoryOfBesselFunctions'>web</a>)</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -333,14 +337,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on September  6, 2017 04:59:49 
+  Revised on November 25, 2017 00:20:35 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (94.220.82.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bessel+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Bessel+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bessel+function/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Bessel+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bessel+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
