--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,82 +308,56 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_35e3362b34ffa65c97de19e7d1ec06cb4e8e0016_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>on-shell space</mtext></mtd></mtr> <mtr><mtd><mtext> of field histories</mtext></mtd></mtr> <mtr><mtd><mtext>restricted to</mtext></mtd></mtr> <mtr><mtd><mtext>Cauchy surface</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mover><mo>⟶</mo><mrow><mtable><mtr><mtd><mtext>homotopy</mtext></mtd></mtr> <mtr><mtd><mtext>quotient</mtext></mtd></mtr> <mtr><mtd><mtext>by</mtext></mtd></mtr> <mtr><mtd><mtext>infinitesimal</mtext></mtd></mtr> <mtr><mtd><mtext>symmetries</mtext></mtd></mtr></mtable></mrow></mover></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>covariant</mtext></mtd></mtr> <mtr><mtd><mtext>phase space</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mover><mo>⟶</mo><mrow><mtable><mtr><mtd><mtext>Lie algebra</mtext></mtd></mtr> <mtr><mtd><mtext>of functions</mtext></mtd></mtr></mtable></mrow></mover></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>Poisson algebra</mtext></mtd></mtr> <mtr><mtd><mtext>of observables</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↘</mo></mtd> <mtd><mo maxsize='1.8em' minsize='1.8em'>↓</mo><msup><mrow></mrow> <mpadded width='0'><mtext>Lie integration</mtext></mpadded></msup></mtd> <mtd></mtd> <mtd><msup><mrow></mrow> <mpadded lspace='-100%width' width='0'><mi>quantization</mi></mpadded></msup><mo maxsize='1.8em' minsize='1.8em'>↓</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>symplectic</mtext></mtd></mtr> <mtr><mtd><mtext>groupoid</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mover><mo>⟶</mo><mrow><mtable><mtr><mtd><mtext>polarized</mtext></mtd></mtr> <mtr><mtd><mtext>convolution</mtext></mtd></mtr> <mtr><mtd><mtext>algebra</mtext></mtd></mtr></mtable></mrow></mover></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>quantum algebra</mtext></mtd></mtr> <mtr><mtd><mtext>of observables</mtext></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
-  \array{
-  \left\{
-    \array{
-      \text{on-shell space} 
-      \\
-      \text{ of field histories}
-      \\
-      \text{restricted to}
-      \\ 
-      \text{Cauchy surface}
-    }
-  \right\}
-   &amp;\overset{\array{ \text{homotopy} \\ \text{quotient} \\ \text{by} \\ \text{infinitesimal} \\ \text{symmetries} }}{\longrightarrow}
-   &amp;
-   \left\{
-       \array{
-         \text{covariant}
-         \\
-         \text{phase space}
-       }
-   \right\}
-   &amp;\overset{ \array{\text{Lie algebra} \\ \text{of functions} } }{\longrightarrow}&amp;
-   \left\{
-      \array{
-        \text{Poisson algebra}
-        \\
-        \text{of observables}
-      }
-   \right\}
-   \\
-   &amp;
-     \searrow
-   &amp;
-     \Big\downarrow{}^\mathrlap{{\text{Lie integration}}}
-   &amp;&amp;
-     {}^{\mathllap{quantization}}\Big\downarrow
-   \\
-   &amp;&amp; \left\{
-      \array{
-        \text{symplectic}
-        \\
-        \text{groupoid}
-      }
-   \right\}
-   &amp;
-   \overset{
-      \array{
-         \text{polarized}
-         \\
-         \text{convolution}
-         \\
-         \text{algebra}
-      }
-   }{\longrightarrow}&amp;
-   \left\{
-      \array{
-         \text{quantum algebra}
-         \\
-         \text{of observables}
-      }
-   \right\}
-   }
+    <p>We have seen that the <a class='existingWikiWord' href='/nlab/show/positive+number'>positive</a> <a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a> component of the <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a> <math class='maruku-mathml' display='inline' id='mathml_36dfa15051031c3b417a29c39aa40c222bb3fec2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>S</mi></msub></mrow><annotation encoding='application/x-tex'>\Delta_S</annotation></semantics></math> for the <a class='existingWikiWord' href='/nlab/show/Klein-Gordon+equation'>Klein-Gordon equation</a> on <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> (prop. \ref{AdvancedRetardedPropafatorsForKleinGordonOnMinkowskiSpacetime}) is the <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard propagator</a> <math class='maruku-mathml' display='inline' id='mathml_36dfa15051031c3b417a29c39aa40c222bb3fec2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>H</mi></msub></mrow><annotation encoding='application/x-tex'>\Delta_H</annotation></semantics></math> (def. \ref{StandardHadamardDistributionOnMinkowskiSpacetime}) given, according to prop. \ref{SkewSymmetricPartOfHadmrdPropagatorIsCausalPropagatorForKleinGordonEquationOnMinkowskiSpacetime}, by (eq:DeompositionOfHadamardPropagatorOnMinkowkski)</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_36dfa15051031c3b417a29c39aa40c222bb3fec2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><msub><mi>Δ</mi> <mi>H</mi></msub></mtd> <mtd><mo>=</mo><mstyle displaystyle='false'><mfrac><mi>i</mi><mn>2</mn></mfrac></mstyle><msub><mi>Δ</mi> <mi>S</mi></msub><mo>+</mo><mi>H</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mstyle displaystyle='false'><mfrac><mi>i</mi><mn>2</mn></mfrac></mstyle><mrow><mo>(</mo><msub><mi>Δ</mi> <mo>+</mo></msub><mo lspace='verythinmathspace' rspace='0em'>−</mo><msub><mi>Δ</mi> <mo>−</mo></msub><mo>)</mo></mrow><mo>+</mo><mi>H</mi></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    \Delta_H
+    &amp; =
+    \tfrac{i}{2} \Delta_S
+    +
+    H
+    \\
+    &amp; =
+    \tfrac{i}{2}
+    \left(
+      \Delta_+ - \Delta_-
+    \right)
+    +
+    H
+  \end{aligned}
+  \,,
 
 </annotation></semantics></math></div>
+<div class='num_defn' id='FeynmanPropagatorForKleinGordonEquationOnMinkowskiSpacetime'>
+<h6 id='definition'>Definition</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a> for <a class='existingWikiWord' href='/nlab/show/Klein-Gordon+equation'>Klein-Gordon equation</a> on <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a>)</strong></p>
+
+<p>The <em><a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></em> for the <a class='existingWikiWord' href='/nlab/show/Klein-Gordon+equation'>Klein-Gordon equation</a> on <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> is the <a class='existingWikiWord' href='/nlab/show/linear+combination'>linear combination</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_36dfa15051031c3b417a29c39aa40c222bb3fec2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>F</mi></msub><mo>≔</mo><mstyle displaystyle='false'><mfrac><mi>i</mi><mn>2</mn></mfrac></mstyle><mrow><mo>(</mo><msub><mi>Δ</mi> <mo>+</mo></msub><mo lspace='verythinmathspace' rspace='0em'>+</mo><msub><mi>Δ</mi> <mo>−</mo></msub><mo>)</mo></mrow><mo>+</mo><mi>H</mi></mrow><annotation encoding='application/x-tex'>
+  \Delta_F
+  \coloneqq
+    \tfrac{i}{2}
+    \left(
+      \Delta_+ + \Delta_-
+    \right)
+    +
+    H
+
+</annotation></semantics></math></div>
+<p>where the first terms is proportional to the sum instead of the <a class='existingWikiWord' href='/nlab/show/advanced+and+retarded+causal+propagators'>advanced and retarded propagators</a> (prop. \ref{AdvancedRetardedPropafatorsForKleinGordonOnMinkowskiSpacetime}) and the second is the symmetric part of the <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard propagator</a> according to prop. \ref{SkewSymmetricPartOfHadmrdPropagatorIsCausalPropagatorForKleinGordonEquationOnMinkowskiSpacetime}.</p>
+</div>
 </div>
 
 <div class="revisedby">
-  Revised on November 25, 2017 00:09:03 
+  Revised on November 25, 2017 07:57:29 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.82.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1282" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1282 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1283" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1283 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
