--- a/pages/18586.html
+++ b/pages/18586.html
@@ -323,7 +323,13 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li>G. N. Watson, <em>A treatise on the theory of Bessel functions</em>, Cambridge University Press 1966 (<a href='https://archive.org/details/ATreatiseOnTheTheoryOfBesselFunctions'>web</a>)</li>
+<li>
+<p>Milton Abramowitz, Irene Stegun, sections 9, 10, 11 of_Handbook of mathematical functions_, 1964 (<a href='http://people.math.sfu.ca/~cbm/aands/abramowitz_and_stegun.pdf'>pdf</a>)</p>
+</li>
+
+<li>
+<p>G. N. Watson, <em>A treatise on the theory of Bessel functions</em>, Cambridge University Press 1966 (<a href='https://archive.org/details/ATreatiseOnTheTheoryOfBesselFunctions'>web</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -337,14 +343,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 25, 2017 00:20:35 
+  Revised on November 25, 2017 07:23:34 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.82.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bessel+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bessel+function/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Bessel+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bessel+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bessel+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bessel+function/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Bessel+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bessel+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
