--- a/pages/18586.html
+++ b/pages/18586.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,17 +308,23 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='properties'>Properties</h2>
+    <h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#IntegralRepresentations'>Integral representations</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
 
-<h3 id='integral_representations'>Integral representations</h3>
-<div class='maruku-equation' id='eq:J0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_82dec380278e3cfc49cb34c38515a0ab5916568e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>J</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mfrac><mn>2</mn><mi>π</mi></mfrac><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>sin</mi><mrow><mo>(</mo><mi>x</mi><mi>cosh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+<p>(…)</p>
+
+<h2 id='properties'>Properties</h2>
+
+<h3 id='IntegralRepresentations'>Integral representations</h3>
+<div class='maruku-equation' id='eq:J0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_990a6f9b82d2ce10e6cef714ab0061ffff979c17_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>J</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mfrac><mn>2</mn><mi>π</mi></mfrac><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>sin</mi><mrow><mo>(</mo><mi>x</mi><mspace width='thinmathspace'></mspace><mi>cosh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
   
   J_0(x)
   \;=\;
   \frac{2}{\pi}
   \int_0^\infty
   \sin\left( 
-    x \cosh(t)
+    x \, \cosh(t)
   \right)
   \,
   dt
@@ -329,6 +335,43 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>(<a href='#DLMF'>DLMF</a> <a href='http://dlmf.nist.gov/10.9#E9'>10.9.9</a>)</p>
+<div class='maruku-equation' id='eq:N0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(2)</span><math class='maruku-mathml' display='block' id='mathml_990a6f9b82d2ce10e6cef714ab0061ffff979c17_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>N</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>≔</mo><msub><mi>Y</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo>−</mo><mfrac><mn>2</mn><mi>π</mi></mfrac><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>cos</mi><mrow><mo>(</mo><mi>x</mi><mspace width='thinmathspace'></mspace><mi>cosh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+  
+  N_0(x)
+  \coloneqq
+  Y_0(x)
+  \;=\;
+  -\frac{2}{\pi}
+  \int_0^\infty
+  \cos\left( 
+    x \,\cosh(t)
+  \right)
+  \,
+  dt
+  \phantom{AAAA}
+  \text{if}
+  \,\,
+  x \gt 0
+
+</annotation></semantics></math></div>
+<p>(<a href='#DLMF'>DLMF</a> <a href='http://dlmf.nist.gov/10.9#E9'>10.9.9</a>)</p>
+<div class='maruku-equation' id='eq:K0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(3)</span><math class='maruku-mathml' display='block' id='mathml_990a6f9b82d2ce10e6cef714ab0061ffff979c17_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>K</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>cos</mi><mrow><mo>(</mo><mi>x</mi><mspace width='thinmathspace'></mspace><mi>sinh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+  
+  K_0(x)
+  \;=\;
+  \int_0^\infty
+  \cos\left( 
+    x \,\sinh(t)
+  \right)
+  \,
+  dt
+  \phantom{AAAA}
+  \text{if}
+  \,\,
+  x \gt 0
+
+</annotation></semantics></math></div>
+<p>(<a href='#DLMF'>DLMF</a> <a href='http://dlmf.nist.gov/10.32#E6'>10.32.6</a>)</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -338,7 +381,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a>, <a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard propagator</a></p>
 </li>
 </ul>
 
@@ -366,17 +409,25 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 25, 2017 20:00:46 
+  Revised on November 25, 2017 21:50:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.82.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bessel+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bessel+function/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Bessel+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bessel+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bessel+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bessel+function/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Bessel+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bessel+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
