--- a/pages/673.html
+++ b/pages/673.html
@@ -333,7 +333,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>The smooth Hom-stack of an orbifold</em>, Joint with <a class='existingWikiWord' href='/nlab/show/Raymond+Vozzo'>Raymond Vozzo</a>, <a href='https://arxiv.org/abs/1610.05904'>arXiv:1610.05904</a>. To appear in the <a href='https://www.matrix-inst.org.au/2016-matrix-annals/'>2016 MATRIX Annals</a>. (Accepted 13 December 2016)</p>
+<p><em>The smooth Hom-stack of an orbifold</em>, Joint with <a class='existingWikiWord' href='/nlab/show/Raymond+Vozzo'>Raymond Vozzo</a>, <a href='https://arxiv.org/abs/1610.05904'>arXiv:1610.05904</a>. To appear in the <a href='https://www.matrix-inst.org.au/2016-matrix-annals/'>2016 MATRIX Annals</a>. (Accepted 13 December 2016) (<a href='http://www.springer.com/gp/book/9783319722986'>SpringerLink</a> - to be published 22 February 2018)</p>
 </li>
 
 <li>
@@ -394,11 +394,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_dc457db2ad0f7a3fd514138e7521f2425fba7980_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
+<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_13239e246b4dd729ecf788ad0430f3ad3f4dd3af_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
 </li>
 
 <li>
-<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_dc457db2ad0f7a3fd514138e7521f2425fba7980_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
+<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_13239e246b4dd729ecf788ad0430f3ad3f4dd3af_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
 </li>
 
 <li>
@@ -512,14 +512,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 20, 2017 01:41:26 
+  Revised on November 26, 2017 05:50:31 
   by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
-  (129.127.37.135)
+  (218.215.32.161)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/145" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(145 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/146" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(146 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
